--- a/src/assets/scss/color.scss
+++ b/src/assets/scss/color.scss
@@ -9,9 +9,9 @@ $color-type-style: #540000;
 $color-button-default: #5ADAD0;
 
 $color-box-shadow: #EBEBEB;
-
+$color-warning:green;
 $color-background-default: #FFFFFF;
-
+$link-default-color:red;
 $color-border-default: #CCCCCC;
 
 $color-icon-error: #f75e4b;
